--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,4 @@
+@import './iconfont.css';
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
   --vt-c-white: #ffffff;
@@ -59,23 +60,47 @@
   font-weight: normal;
 }
 
+*::-webkit-scrollbar {
+  width: 8px;
+  background-color: transparent;
+  border-radius: 100px;
+}
+
 body {
   min-height: 100vh;
   line-height: 1.4;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  /* font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; */
+  font-family: -apple-system,BlinkMacSystemFont,PingFangSC-Regular,"PingFang SC","Microsoft YaHei","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 14px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #40404c;
 }
 
 a {
+  color: #40404c;
+  background-color: transparent;
   text-decoration: none;
+  outline: 0;
+  cursor: pointer;
 }
 
 img {
   vertical-align: middle;
   border: 0;
   max-width: 100%;
+}
+
+ul, li {
+  list-style: none;
+}
+
+.fl {
+  float: left;
+}
+
+.fr {
+  float: right;
 }
